syntax = "proto3";

package greeting;

option java_package = "com.kensai.grpc.proto";
option java_multiple_files = true;

message Person {
  string first_name = 1;
  string last_name = 2;
}

message GreetingRequest {
  Person person = 1;
}

message GreetingResponse {
  string greeting_message = 1;
}

service GreetingService {
  rpc Greet(GreetingRequest) returns (GreetingResponse) {};
}
